@@ -738,43 +738,6 @@ uprv_getMaxValues(int32_t column) {
 #endif
 }
 
-/*
- * get Hangul Syllable Type
- * implemented here so that uchar.c (uhst_addPropertyStarts())
- * does not depend on uprops.c (u_getIntPropertyValue(c, UCHAR_HANGUL_SYLLABLE_TYPE))
- */
-U_CFUNC UHangulSyllableType
-uchar_getHST(UChar32 c) {
-    /* purely algorithmic; hardcode known characters, check for assigned new ones */
-    if(c<JAMO_L_BASE) {
-        /* U_HST_NOT_APPLICABLE */
-    } else if(c<=0x11ff) {
-        /* Jamo range */
-        if(c<=0x115f) {
-            /* Jamo L range, HANGUL CHOSEONG ... */
-            if(c==0x115f || c<=0x1159 || u_charType(c)==U_OTHER_LETTER) {
-                return U_HST_LEADING_JAMO;
-            }
-        } else if(c<=0x11a7) {
-            /* Jamo V range, HANGUL JUNGSEONG ... */
-            if(c<=0x11a2 || u_charType(c)==U_OTHER_LETTER) {
-                return U_HST_VOWEL_JAMO;
-            }
-        } else {
-            /* Jamo T range */
-            if(c<=0x11f9 || u_charType(c)==U_OTHER_LETTER) {
-                return U_HST_TRAILING_JAMO;
-            }
-        }
-    } else if((c-=HANGUL_BASE)<0) {
-        /* U_HST_NOT_APPLICABLE */
-    } else if(c<HANGUL_COUNT) {
-        /* Hangul syllable */
-        return c%JAMO_T_COUNT==0 ? U_HST_LV_SYLLABLE : U_HST_LVT_SYLLABLE;
-    }
-    return U_HST_NOT_APPLICABLE;
-}
-
 U_CAPI void U_EXPORT2
 u_charAge(UChar32 c, UVersionInfo versionArray) {
     if(versionArray!=NULL) {
@@ -804,71 +767,6 @@ ublock_getCode(UChar32 c) {
 }
 
 /* property starts for UnicodeSet ------------------------------------------- */
-
-/* for Hangul_Syllable_Type */
-U_CFUNC void U_EXPORT2
-uhst_addPropertyStarts(const USetAdder *sa, UErrorCode *pErrorCode) {
-    UChar32 c;
-    int32_t value, value2;
-
-    if(U_FAILURE(*pErrorCode)) {
-        return;
-    }
-
-#if !UCHAR_HARDCODE_DATA
-    if(!HAVE_DATA) {
-        *pErrorCode=dataErrorCode;
-        return;
-    }
-#endif
-
-    /* add code points with hardcoded properties, plus the ones following them */
-
-    /*
-     * Add Jamo type boundaries for UCHAR_HANGUL_SYLLABLE_TYPE.
-     * First, we add fixed boundaries for the blocks of Jamos.
-     * Then we check in loops to see where the current Unicode version
-     * actually stops assigning such Jamos. We start each loop
-     * at the end of the per-Jamo-block assignments in Unicode 4 or earlier.
-     * (These have not changed since Unicode 2.)
-     */
-    sa->add(sa->set, 0x1100);
-    value=U_HST_LEADING_JAMO;
-    for(c=0x115a; c<=0x115f; ++c) {
-        value2=uchar_getHST(c);
-        if(value!=value2) {
-            value=value2;
-            sa->add(sa->set, c);
-        }
-    }
-
-    sa->add(sa->set, 0x1160);
-    value=U_HST_VOWEL_JAMO;
-    for(c=0x11a3; c<=0x11a7; ++c) {
-        value2=uchar_getHST(c);
-        if(value!=value2) {
-            value=value2;
-            sa->add(sa->set, c);
-        }
-    }
-
-    sa->add(sa->set, 0x11a8);
-    value=U_HST_TRAILING_JAMO;
-    for(c=0x11fa; c<=0x11ff; ++c) {
-        value2=uchar_getHST(c);
-        if(value!=value2) {
-            value=value2;
-            sa->add(sa->set, c);
-        }
-    }
-
-    /* Add Hangul type boundaries for UCHAR_HANGUL_SYLLABLE_TYPE. */
-    for(c=HANGUL_BASE; c<(HANGUL_BASE+HANGUL_COUNT); c+=JAMO_T_COUNT) {
-        sa->add(sa->set, c);
-        sa->add(sa->set, c+1);
-    }
-    sa->add(sa->set, c);
-}
 
 static UBool U_CALLCONV
 _enumPropertyStartsRange(const void *context, UChar32 start, UChar32 end, uint32_t value) {
